--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,10 +1,6 @@
-.trendingMovies {
-  display: flex;
-  overflow: auto;
-  max-width: 100%;
+.movie {
+  margin: 10px 10px;
 }
-.items.active {
-  cursor: grabbing;
-  cursor: -webkit-grabbing;
-  transform: scale(1);
+.home {
+  padding: 30px 0;
 }
