--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,11 @@
 }
 
 body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   font-size: 20px;
   margin: 0;
   background-color: #222;
   color: white;
   min-width: 100%;
-  overflow: hidden;
 }
 .btn {
   background-color: transparent;
@@ -30,4 +24,16 @@ body {
   background-color: white;
   color: black;
   cursor: pointer;
+}
+.btn > a {
+  color: white;
+  text-decoration: none;
+}
+.btn:hover > a {
+  color: black;
+}
+@media screen and (max-width: 767px) {
+  .movie {
+    margin: 10px 0 !important;
+  }
 }
